[package]
name = "abuseipdb-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
ureq = { version = "2.6", features = ["json"] }
