[package]
name = "abuseipdb"
version = "0.4.0"
edition = "2024"
authors = ["Gonçalo Ribeiro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
ureq = { version = "3", features = ["json"] }
